--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -7,11 +7,20 @@
     <div class="post-info-time"><%= time_ago_in_words(post.created_at) %> ago</div>
   </div>
   <div class="post-actions">
+    <% if post.liked_by?(current_user) %>
+      <%= link_to dislike_post_path(post), method: :delete do %>dislike
+      <% end %>
+    <% else %>
+      <%= link_to like_post_path(post), method: :post do %>like
+      <% end %>
+    <% end %>
     <% if post.can_edit?(current_user) %>
-      <%= link_to 'edit', edit_post_path(post) %>
+      <%= link_to edit_post_path(post) do %>edit
+      <% end %>
     <% end %>
     <% if post.can_destroy?(current_user) %>
-      <%= link_to 'delete', post_path(post), method: :delete %>
+      <%= link_to post_path(post), method: :delete, data: { confirm: 'Are you sure?' } do %>delete
+      <% end %>
     <% end %>
   </div>
 </div>
