--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,2 @@
 <h2>New Post</h2>
-<%= form_for(@post) do |f| %>
-  <%= f.label(:body) %>
-  <%= f.text_area(:body) %>
-  <%= f.submit('Save') %>
-<% end %>
+<%= render 'post_form' %>
