--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,30 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Regrapher Example App Rails4</title>
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-<header>
-  <% if user_signed_in? %>
-    <%= link_to 'Home', posts_path %>
-    <%= link_to 'New post', new_post_path %>
-    <%= link_to 'Me', user_posts_path(current_user) %>
-    <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
-  <% else %>
-    <%= link_to 'Log in', new_user_session_path %>
-  <% end %>
-</header>
-<main>
-  <% flash.each do |name, msg| %>
-    <% if %w(notice alert).include?(name.to_s) %>
-      <%= content_tag :div, msg, id: "flash_#{name}" %>
-    <% end %>
-  <% end %>
-
-  <%= yield %>
-</main>
-</body>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= content_for?(:title) ? yield(:title) : 'Regrapher showcase app (rails 4.2)' %></title>
+    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : 'Regrapher showcase app (rails 4.2)' %>">
+    <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <header>
+      <%= render 'layouts/navigation' %>
+    </header>
+    <main role="main" class="container">
+       <%= render 'layouts/messages' %>
+       <%= yield %>
+    </main>
+  </body>
 </html>
