--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,8 +1,17 @@
+<h1>About</h1>
 <p>
   This an example application that demonstrates how you can easily instrument your rails app to build
   and share live monitoring dashboards with <%= link_to 'Regrapher', 'https://www.regrapher.com' -%>.
 </p>
 <p>
-  The application is open source code is available at <%= link_to 'github', 'https://github.com/regrapher/regrapher-example-app-rails-4' -%>.
+  <strong>
+    Here is a sample shared (read-only)
+    <%= link_to 'dashboard', 'https://www.regrapher.com/shared_dashboards/dWX8UONeDHoXaLq51M5ccI8heMgsCw4LpgTD6z3F' %>
+    monitoring this application activity in real-time.
+  </strong>
+</p>
+<p>
+  This application is open source code is available
+  at <%= link_to 'github', 'https://github.com/regrapher/regrapher-example-app-rails-4' -%>.
 </p>
 
