add sign_out, like, dislike and post destroy actions in simulator task

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<div class="post <%= 'liked' if post.liked %>" id="post-<%= post.id %>">
+<div class="post <%= 'liked' if post.liked -%> <%= 'self' if post.user == current_user-%>" id="post-<%= post.id %>">
   <div class="post-body">
     <%= simple_format(post.body) %>
   </div>
