Add about alert

--- a/app/views/layouts/_nav_links_for_auth.html.erb
+++ b/app/views/layouts/_nav_links_for_auth.html.erb
@@ -13,5 +13,5 @@
   </li>
 <% else %>
   <li><%= link_to 'Sign in', new_user_session_path %></li>
-  <li><%= link_to 'Sign up', new_user_registration_path, class: 'sign-up' %></li>
+  <li><p class="navbar-btn"><%= link_to 'Sign up', new_user_registration_path, class: 'btn btn-danger' %></p></li>
 <% end %>
