--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,9 +5,9 @@
 </p>
 <p>
   <strong>
-    Here is a sample shared (read-only)
+    We have built a (read-only)
     <%= link_to 'dashboard', 'https://www.regrapher.com/shared_dashboards/dWX8UONeDHoXaLq51M5ccI8heMgsCw4LpgTD6z3F', target: '_blank' %>
-    monitoring this application activity in real-time.
+    that monitors this application activity in real-time.
   </strong>
 </p>
 <div class="well well-lg">
